--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "inquantumai-internship",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
+  "description": "AI Chatbot backend using Gemini and Node.js for InQuantum AI internship",
+  "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint .",
-    "format": "eslint . --fix",
-    "typecheck": "tsc",
-    "build": "tsc --noEmit false",
     "dev": "tsc-watch --onSuccess \"tsx ./src/index.ts\"",
     "start": "tsc && tsx ./src/index.ts",
     "start:force": "tsx ./src/index.ts",
+
+    "typecheck": "tsc",
+    "build": "tsc --noEmit false",
+
+    "lint": "eslint .",
+    "format": "eslint . --fix",
     "format:prt": "prettier --write .",
     "format:check": "prettier --check ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["gemini", "google ai", "typescript", "express", "chatbot", "internship"],
+  "author": "Abror Alisherov",
+  "license": "MIT",
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
+    "@google/genai": "^1.11.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
   },
@@ -28,7 +31,8 @@
     "@types/node": "^24.1.0",
     "eslint": "^9.32.0",
     "prettier": "^3.6.2",
-    "ts-node": "^10.9.2",
+    "tsc-watch": "^7.1.1",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
   }
